refactored html and css, added an anchor to header logo combined clearfix, fixed page overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,6 @@
-body, html{
-    height: 100%;
-}
-
 body{
     background: url(../images/bg.png);
+    height: 100vh;
 }
 
 h1, h2{
@@ -27,7 +24,7 @@ header{
     border-bottom: 1.5px solid #cccccc;
 }
 
-#nav-container{
+#hd-container{
     line-height: 70px;
 }
 
@@ -35,12 +32,14 @@ header{
     box-sizing: border-box;
     width: 960px;
     margin: auto;
+    min-height: calc(100% - 201px);
 }
 
 #text-logo{
     float: left;
     background-color: #4aaaa5;
     padding: 0 30px;
+    text-decoration: none;
     color: #fff;
 }
 
@@ -58,12 +57,11 @@ ul li:last-child{
     margin-right: 0;
 }
 
-
-ul li a{
+ul a{
     text-decoration: none;
 }
 
-ul li a:hover{
+ul a:hover{
     color: #4aaaa5;
 }
 
@@ -74,41 +72,22 @@ img{
     margin: 0 20px 20px 0;
 }
 
-#cnt-container{
+#sec-container{
     background-color: #fff;
-    padding: 30px 30px;
+    padding: 30px;
     margin: 30px auto;
     border: 1px solid #dddddd;
-    min-height: calc(100% - 198px);
+    overflow: auto;
 }
 
-#cnt-container:before, #cnt-container:after{
-    content: "";
-    display: block;
-    clear: both;
-}
-
-#cnt-container section h1{
+#sec-container h1{
     color: #4aaaa5;
     margin-bottom: 15px;
 }
 
-#cnt-container section hr{
+#sec-container hr{
     margin-bottom: 25px;
     border: 1.5px solid #e7e6e7;
-}
-
-footer{
-    position: sticky;
-    background-color: #666666;
-    width: 100%;
-    text-align: center;
-    border-top: 8px solid #4aaaa5;
-}
-
-footer div p{
-    line-height: 60px;
-    color: #cccccc;
 }
 
 .form label{
@@ -177,4 +156,17 @@ textarea{
     text-align: center;
     width: 100%;
     line-height: 45px;
+}
+
+footer{
+    position: sticky;
+    width: 100%;
+    background-color: #666666;
+    text-align: center;
+    border-top: 8px solid #4aaaa5;
+}
+
+footer p{
+    line-height: 60px;
+    color: #cccccc;
 }
